--- a/problemlist.html
+++ b/problemlist.html
@@ -1123,18 +1123,24 @@
                 <li><strong>002200-刑事庭审笔录</strong></li>
                 <li><strong>002300-刑事庭审笔录</strong></li>
                 <li id="002400"><strong>002400-相关证据材料</strong></li>
+                <p><strong>问题：</strong>此页为王贵平2019年1月21日22时50分被送达看守所的入所健康档案封面，封面右下角入所时间记录得非常详细，特别是22时50分。根据案发时间2019年1月20日18时30分王贵平被采取强制措施明显超24小时，存在超期送羁问题，但入所时间却记录为2019年1月21日22时50分，表明王贵平被抓捕后，在贵阳市毓秀路派出所滞留超24小时，明显违反《中华人民共和国刑事诉讼法》第八十五条规定。</p>
                 <li><strong>002500-相关证据材料</strong></li>
+                <p><strong>问题：</strong>此页为记录的王贵平的入所伤情是在抢劫被害人手机过程中打斗致伤，明显不合常理，案发全程王贵平根本没被打，其伤情只有在派出所内被持械暴力执法所致，并且造成软组织损伤的严重情况，凭双手的可能性较低，并且入所时伤情没有消退。</p>
                 <li><strong>002600-相关证据材料</strong></li>
+                <p><strong>问题：</strong>此页的其他选项记录王贵平否认被打，这是被暴力致伤基于恐惧心理作出的回答，说明不了问题。</p>
                 <li><strong>002700-相关证据材料</strong></li>
-                <li><strong>002800-相关证据材料</strong></li>
+                <p><strong>问题：</strong>此页为健康档案的人体标识图，清晰显示王贵平入所时右眼部左背部软组织损伤，双手背肿胀。</p>
+                <li><strong>002800-相关证据材料</strong>此页为健康档案的体检结论，里面有这样的清晰记录“右眼部左背部淤青，双手背肿胀，请示刘廷祥所长协议收押，三级风险，突发精神异常。”客观证明被滞留派出所期间被暴力持械执法。</li>
+                <p><strong>问题：</strong></p>
                 <li><strong>002900-相关证据材料</strong></li>
                 <li><strong>003000-相关证据材料</strong></li>
                 <li><strong>003100-相关证据材料</strong></li>
                 <li><strong>003200-相关证据材料</strong></li>
                 <li><strong>003300-相关证据材料</strong></li>
-                <p><strong>问题：</strong>从002400～003300共10页是王贵平在看守所的健康档案，其中002400，即健康档案封面记录了王贵平2019年1月21日22时50分被送达看守所，据案发时间2019年1月20日18时30分王贵平被采取强制措施明显超24小时，存在超期送羁问题；另外</p>
-                <p><strong>依据：</strong></p>
-                <p><strong>结论：</strong></p>
+                <p><strong>问题：</strong>从002900～003300是2019年1月21日中午在贵阳市云岩区人民医院的体检结果。</p>
+                <p><strong>结论：</strong>从王贵平的入所健康档案（归档编号002400-003300），结合起诉书记录案发时间是2019年1月20日18时30分许，王贵平被抓捕时间大概在2019年1月20日19时前，与2019年1月21日22时50分对比，明显超出《中华人民共和国刑事诉讼法》第八十五条规定时限，送羁程序违法；</p>
+                <p>王贵平健康档案显示的伤情是由于在派出所内被持械暴力执法所致，并且造成软组织损伤的严重情况，凭双手打斗致伤的可能性较低，并且入所时伤情没有消退。并且法院卷宗正卷无投案时时公安岗亭内的监控视频和捕警的执法记录仪视频证明王贵平被抓捕时是否存在伤情，并且该视频是证明涉案证物OPPO A5手机的直接证据，能证明涉案证物OPPO A5手机的来源，根据《公安机关现场执法视音频记录工作规定》（公通字〔2016〕14号）第十三条 第（一）项规定，作为刑事案件证据使用应当永久保存，但法院正卷材料缺失该视频资料，说明相关方存在隐匿证据的问题。所以相关方需正式书面答复和回应，并对有关不法行为人严肃处理。</p>
+                <p><strong>依据：</strong>《中华人民共和国刑事诉讼法》第八十五条，《公安机关现场执法视音频记录工作规定》（公通字〔2016〕14号）第十三条 第（一）项</p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="003400"><strong>003400-相关证据材料</strong></li>
                 <li><strong>003500-相关证据材料</strong></li>
@@ -1145,61 +1151,61 @@
                 <li><strong>004000-相关证据材料</strong></li>
                 <li><strong>004100-相关证据材料</strong></li>
                 <li><strong>004200-相关证据材料</strong></li>
-                <p><strong>问题：</strong></p>
-                <p><strong>依据：</strong></p>
-                <p><strong>结论：</strong></p>
+                <p><strong>问题：</strong>归档编号0034-0042是王贵平的一审自书辩护词共3页，内容一致，却被重复归档，并且编排顺序明显在审判笔录和判决书之前，次序混乱。明显违反《最高人民法院、国家档案局关于印发<人民法院诉讼档案管理办法>和<人民法院电子诉讼档案管理暂行办法>的通知》（法〔2013〕283号）的规定。</p>
+                <p><strong>依据：</strong>《最高人民法院、国家档案局关于印发<人民法院诉讼档案管理办法>和<人民法院电子诉讼档案管理暂行办法>的通知》（法〔2013〕283号）、《最高人民法院关于全面推进人民法院电子卷宗随案同步生成和深度应用的指导意见》(法〔2016〕264号)</p>
+                <p><strong>结论：</strong>一审正卷卷宗资料归档不合规定。并且卷宗资料不是随案件各阶段同步形成，形成的时间统一在2020年12月14日和2020年12月15日这两天，违反《最高人民法院关于全面推进人民法院电子卷宗随案同步生成和深度应用的指导意见》(法〔2016〕264号)的规定。这种事后统一制作电子卷宗资料的做法，存在严重的制作假案隐患，为事后留下操作空间，如不严惩，社会危害极大，会导致黑白不分，什么案件都可操作成“合法”的卷宗材料。</p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="004300"><strong>004300-刑事判决书</strong></li>
                 <li><strong>004400-刑事判决书</strong></li>
                 <li><strong>004500-刑事判决书</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>004300-004500是（2019）黔0103刑初821号刑事判决书的归档编号，判决书每页都有防伪标识条码，扫码后能显示”¹óÖÝÊ¡·¨ÔºÉóÅÐÏµÍ³[×¨ÓÃ];96A74115CCA046C891F19BD029487426;¸ÇÕÂÈË£ºÒüÉº;¸ÇÕÂÊ±¼ä£º2019-07-30 10:13:10;ÎÄ¼þÃû³Æ£ºÐÌÊÂÅÐ¾öÊé£¨Ò»ÉóÆÕÍ¨³ÌÐòÓÃ£©[CP]",确定法律文书形成时间，可追溯性强，即便法院档案室2020年12月14日才事后统一扫描形成JPG文件，但其追溯力丝毫不受影响。但存在的问题是判决书第2页正文中存在"王UI平"的异常字符，这明显不是打字时输出，因为电脑打字形成这样的字符，需中英输入法切换，并且还是输入大写英文字符，接着还需切回中文输入。疑似在通过异常字符释放某种信号，存在恶意窜通的隐患。且正卷卷宗材料统一在2020年12月形成得以印证，原本该判决书在2019年8月就应形成归档电子材料，最迟也不超2020年2月。很明显是在释放信号等待王贵平的认罪结果，但王贵平截至目前2025年也没认罪，归档文件形成时时2020年12月14日，疑似当时王贵平在服刑过程中没有中招，在监狱里被要求写认罪悔罪相关条款的改造资料时没有上套，导致归档期限明显超期，所以不得已才最终在2020年12月14日扫描形成JPG文件进行归档，同时也留下了正卷卷宗资料形成不同步，甚至超期归档的迹象。</p>
                 <p><strong>依据：</strong></p>
                 <p><strong>结论：</strong></p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="004600"><strong>004600-宣判笔录及送达回证</strong></li>
-                <p><strong>问题：</strong></p>
-                <p><strong>依据：</strong></p>
-                <p><strong>结论：</strong></p>
+                <p><strong>问题：</strong>归档编号为004600是2019年8月1日的（2019）黔0103刑初821号宣判笔录， 这个笔录其实是在看守所直接给王贵平签发的，并没有记录是事实，即在贵阳市云岩区人民法院进行宣判，更没有给王贵平宣读判决书。并且只有王贵平的签字捺印和书记员马晓捷的签名</p>
+                <p><strong>依据：</strong>违反 “宣告判决一律公开进行” 的原则（《刑事诉讼法》第二百零二条）；未履行 “宣判时宣读判决书” 的法定义务（《刑诉法解释》第二百四十七条）；宣判笔录制作不规范，缺少审判人员签名，无法证明程序合法性（《刑事诉讼法》第二百零七条）。</p>
+                <p><strong>结论：</strong>违反法定程序，一律公开宣判的规定。没有2019年8月1日对王贵平的提押票，事实上王贵平也当天也没有到该法院，无提押票足以证实。</p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="004700"><strong>004700-宣判笔录及送达回证</strong></li>
-                <p><strong>问题：</strong></p>
-                <p><strong>依据：</strong></p>
-                <p><strong>结论：</strong></p>
+                <p><strong>问题：</strong>004700是2019年8月1日（2019）黔0103刑初821号刑事判决书的送达回证，王贵平实际只在看守所签收该判决书和送达回证，根本没有到达该法院，而该回执记录是再该院向王贵平送达判决书明显与实际事实不符，弄虚作假，枉法办案。</p>
+                <p><strong>依据：</strong>没有2019年8月1日对王贵平的提押票，事实上王贵平也当天也没有到该法院。</p>
+                <p><strong>结论：</strong>虚构事实，枉法办案。</p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="004800"><strong>004800-宣判笔录及送达回证</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>004800是向公诉人送达（2019）黔0103刑初821号刑事判决书的送达回证，但是不是公诉人周江红亲自签收，也无单位印证，而是代收，有代收人签字，但是无捺印。很明显该文书完全可以用制作人同时制作，同时虚构代收人并用制作人签名以示完成送达。</p>
                 <p><strong>依据：</strong></p>
                 <p><strong>结论：</strong></p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="004900"><strong>004900-宣判笔录及送达回证</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>004900是向辩护律师许涛送达（2019）黔0103刑初821号刑事判决书的送达回证，但是不是辩护律师许涛亲自签收，也无单位印证，而是代收，有代收人签字，但是无捺印。很明显该文书完全可以用制作人同时制作，同时虚构代收人并用制作人签名以示完成送达。</p>
                 <p><strong>依据：</strong></p>
                 <p><strong>结论：</strong></p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="005000"><strong>005000-提押票</strong></li>
-                <p><strong>问题：</strong></p>
-                <p><strong>依据：</strong></p>
-                <p><strong>结论：</strong></p>
+                <p><strong>问题：</strong>005000-提押票是2019年7月2日开庭的提押票。</p>
+                <p><strong>依据：</strong>《最高人民法院、国家档案局关于印发<人民法院诉讼档案管理办法>和<人民法院电子诉讼档案管理暂行办法>的通知》（法〔2013〕283号）、《最高人民法院关于全面推进人民法院电子卷宗随案同步生成和深度应用的指导意见》(法〔2016〕264号)</p>
+                <p><strong>结论：</strong>归档次序颠倒</p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="005100"><strong>005100-上诉移送函（稿）及退卷函</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>005100-上诉移送函（稿）及退卷函是2019年8月14日向贵阳市中级人民法院卷宗移送函。显示移送卷宗材料有：1、换押证壹份；2、判决书叁份；3、公安卷贰宗，法院卷贰宗，共肆宗；4、起诉书壹份5、口头上诉。然而王贵平的自书上诉状居然没有移送，仅以口头上诉了事，而2019年8月20日中院对王贵平提讯明确有上诉状。</p>
                 <p><strong>依据：</strong></p>
-                <p><strong>结论：</strong></p>
+                <p><strong>结论：</strong>存在故意隐匿或销毁王贵平的自书上诉状的不法行为。</p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="005300"><strong>005300-刑事裁定书</strong></li>
                 <li><strong>005400-刑事裁定书</strong></li>
                 <li><strong>005500-刑事裁定书</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>005300-005500是2019年8月26日制作的（2019）黔01刑终667号刑事裁定书，且没有都有防伪标识条码，于2019年8月27日在看守所送达王贵平。然而待王贵平服刑完毕后发现，在中国裁判文书网公布的2019）黔01刑终667号刑事裁定书对应他案，是一个关于何某某的职务侵占案件。2024年11月4日王贵平第一次到贵阳市中级人民法院档案室发现自己的二审裁定书案号变为2019）黔01刑终669号刑事裁定书，且第1、2页底部无防伪标识条码，第3页有防伪标识条码，且条码信息完全与王贵平收到的2019）黔01刑终667号刑事裁定书防伪标识条码一致。这表明2019）黔01刑终669号刑事裁定书是篡改2019）黔01刑终667号刑事裁定书后，扰乱案件信息关联从而规避责任，并且王贵平的2019）黔01刑终667号刑事裁定书制作时没有第一时间在中国裁判文书网公布，说明该审判人员已发现问题并试图规避责任，同时扰乱王贵平的诉讼进展。</p>
                 <p><strong>依据：</strong></p>
                 <p><strong>结论：</strong></p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="005600"><strong>005600-执行通知书存根及回执</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>005600是王贵平案件的执行通知书存根，是贵阳市云岩区人民法院向看守所签发的，然而却把看守所名称打成“贵阳市无固定住所”，有法院签章，但另一个签章本应是看守所签章的，但是该签章却只盖了一半，没有显示贵阳市公安局云岩分局某某看守所专用章。开起来像直接用该法院的印章盖一半形成，因为如果是看守所的印章签章会显示贵阳市公安局等字样，但这个半印章显示的是“贵阳市云”，不注意会误认为是看守所的签章。并且没有任何人签字，日期显示为2019年9月4日</p>
                 <p><strong>依据：</strong></p>
                 <p><strong>结论：</strong></p>
                 <p><strong>相关方处理进展：</strong></p>
                 <li id="005700"><strong>005700-执行通知书存根及回执</strong></li>
-                <p><strong>问题：</strong></p>
+                <p><strong>问题：</strong>005700是2019年9月27日看守所给贵阳市云岩区人民法院的执行通知书回执。但是签章虽然显示“贵阳市公安局云岩分局看守所”，但是法院的签章只显示一小部分，即“人民法院”，这看起来就是案件有问题的前兆吧，可能也是一直信号。</p>
                 <p><strong>依据：</strong></p>
                 <p><strong>结论：</strong></p>
                 <p><strong>相关方处理进展：</strong></p>
@@ -1238,7 +1244,7 @@
                     <div>
                         <span>日期：</span>
                         <span style="display: inline-block; border-bottom: 1px solid #333; width: 140px; vertical-align: bottom;">
-                            2025年9月4日
+                            2025年9月5日
                         </span>
                     </div>
                 </div>
