--- a/problemlist.html
+++ b/problemlist.html
@@ -1258,7 +1258,11 @@
             <a href="index.html" class="nav-btn">主页</a>
         </nav>
         
-        <nav class="top-float-nav" id="top-nav" aria-label="页面导航（右侧）">
+    <!-- Mobile nav toggle buttons (only visible on small screens) -->
+    <button id="mobile-left-toggle" class="mobile-nav-toggle" aria-expanded="false" aria-controls="nav" aria-label="打开左侧导航">☰</button>
+    <button id="mobile-right-toggle" class="mobile-nav-toggle" aria-expanded="false" aria-controls="top-nav" aria-label="打开右侧导航">⋯</button>
+
+    <nav class="top-float-nav" id="top-nav" aria-label="页面导航（右侧）">
             <a href="#problemlist" class="nav-btn">问题清单</a>
             <a href="#section-laws" class="nav-btn">援引法条</a>
             <a href="#report" class="nav-btn">阅卷报告</a>
@@ -1285,6 +1289,131 @@
             <a href="#005700" class="nav-btn">执行通知书存根</a>
             <a href="#sourcePath" class="nav-btn">来源</a>
         </nav>
+        
+        <!-- Mobile-specific styles for collapsible off-canvas navs -->
+        <style>
+        /* Toggle buttons (hidden on desktop) */
+        .mobile-nav-toggle{
+            position: fixed;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            width:44px; height:44px;
+            border-radius:8px;
+            background:var(--primary);
+            color:#fff;
+            border:none;
+            z-index:1500;
+            box-shadow:0 4px 12px rgba(0,0,0,0.12);
+            font-size:20px;
+        }
+        #mobile-left-toggle{ left: 12px; bottom: 14px; }
+        #mobile-right-toggle{ right: 12px; bottom: 14px; }
+
+        @media (max-width:600px){
+            .mobile-nav-toggle{ display:flex; }
+
+            /* Convert navs to full-height off-canvas panels with scroll */
+            .side-nav{
+                top: 0 !important;
+                left: 0 !important;
+                transform: translateX(-110%);
+                height: 100vh;
+                width: 82vw;
+                max-width: 320px;
+                border-radius: 0 !important;
+                padding: 12px;
+                box-shadow: 2px 0 18px rgba(0,0,0,0.12);
+                overflow-y: auto;
+                transition: transform .28s ease;
+                background: rgba(255,255,255,0.98);
+            }
+            .side-nav.open{ transform: translateX(0); }
+
+            .top-float-nav{
+                top: 0 !important;
+                right: 0 !important;
+                transform: translateX(110%);
+                height: 100vh;
+                width: 82vw;
+                max-width: 320px;
+                border-radius: 0 !important;
+                padding: 12px;
+                box-shadow: -2px 0 18px rgba(0,0,0,0.12);
+                overflow-y: auto;
+                transition: transform .28s ease;
+                background: rgba(255,255,255,0.98);
+            }
+            .top-float-nav.open{ transform: translateX(0); }
+
+            /* Ensure nav buttons remain readable and stack inside panels */
+            .side-nav .nav-btn, .top-float-nav .nav-btn{ display:block; white-space:normal; }
+
+            /* Limit nav height when keyboard opens on mobile (use viewport units) */
+            .side-nav, .top-float-nav{ max-height: calc(100vh - 80px); }
+
+            /* Make sure existing small-screen positioning doesn't conflict */
+            .top-float-nav{ right: 12px; top: 12px; }
+            .side-nav{ left: 12px; top: 12px; }
+        }
+
+        /* Keep a visible scrollbar styling for mobile panels */
+        .side-nav::-webkit-scrollbar, .top-float-nav::-webkit-scrollbar{ width:8px; }
+        .side-nav::-webkit-scrollbar-thumb, .top-float-nav::-webkit-scrollbar-thumb{ background: rgba(25,95,180,0.15); border-radius:6px; }
+        </style>
+
+        <!-- Mobile nav behaviour: toggle open/close, close on outside click or Escape, close after navigation -->
+        <script>
+        document.addEventListener('DOMContentLoaded', function(){
+            var leftToggle = document.getElementById('mobile-left-toggle');
+            var rightToggle = document.getElementById('mobile-right-toggle');
+            var leftNav = document.getElementById('nav');
+            var rightNav = document.getElementById('top-nav');
+
+            function closeAll(){
+                if(leftNav) leftNav.classList.remove('open');
+                if(rightNav) rightNav.classList.remove('open');
+                if(leftToggle) leftToggle.setAttribute('aria-expanded','false');
+                if(rightToggle) rightToggle.setAttribute('aria-expanded','false');
+            }
+
+            if(leftToggle){
+                leftToggle.addEventListener('click', function(e){
+                    e.stopPropagation();
+                    var isOpen = leftNav && leftNav.classList.toggle('open');
+                    leftToggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+                    if(isOpen && rightNav) rightNav.classList.remove('open');
+                });
+            }
+
+            if(rightToggle){
+                rightToggle.addEventListener('click', function(e){
+                    e.stopPropagation();
+                    var isOpen = rightNav && rightNav.classList.toggle('open');
+                    rightToggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+                    if(isOpen && leftNav) leftNav.classList.remove('open');
+                });
+            }
+
+            // Close when clicking outside
+            document.addEventListener('click', function(e){
+                if(!leftNav || !rightNav) return;
+                var target = e.target;
+                var inLeft = leftNav.contains(target) || (leftToggle && leftToggle.contains(target));
+                var inRight = rightNav.contains(target) || (rightToggle && rightToggle.contains(target));
+                if(!inLeft && !inRight){ closeAll(); }
+            });
+
+            // Close on Escape
+            document.addEventListener('keydown', function(e){ if(e.key === 'Escape') closeAll(); });
+
+            // When clicking a nav link on small screens, close the panels
+            function closeOnNavClick(e){
+                if(window.matchMedia && window.matchMedia('(max-width:600px)').matches){ closeAll(); }
+            }
+            [leftNav, rightNav].forEach(function(nav){ if(!nav) return; nav.querySelectorAll('.nav-btn').forEach(function(a){ a.addEventListener('click', closeOnNavClick); }); });
+        });
+        </script>
 <style>
 .side-dropdown { position: relative; }
 .side-dropdown-menu {
