--- a/problemlist.html
+++ b/problemlist.html
@@ -1440,6 +1440,23 @@
             leftNav.innerHTML = html;
             rightNav.innerHTML = html;
 
+            // Ensure homepage link (index.html) is present in the right-nav (and left-nav) for mobile
+            try{
+                var leftHome = leftNav.querySelector('a[href="index.html"]');
+                var rightHome = rightNav.querySelector('a[href="index.html"]');
+                if(leftHome && !rightHome){
+                    // clone and append to rightNav
+                    rightNav.insertAdjacentHTML('afterbegin', leftHome.outerHTML);
+                } else if(!leftHome && rightHome){
+                    leftNav.insertAdjacentHTML('afterbegin', rightHome.outerHTML);
+                } else if(!leftHome && !rightHome){
+                    // create a default home link
+                    var def = '<a href="index.html" class="nav-btn">主页</a>';
+                    rightNav.insertAdjacentHTML('afterbegin', def);
+                    leftNav.insertAdjacentHTML('afterbegin', def);
+                }
+            }catch(e){}
+
             // Helper: smooth scroll to anchor with header offset
             function scrollToId(id){
                 var target = document.getElementById(id);
@@ -1458,13 +1475,16 @@
                 var rt = document.getElementById('mobile-right-toggle'); if(rt) rt.setAttribute('aria-expanded','false');
             }
 
-            // bind clicks on new anchors
+            // bind clicks on new anchors: handle hash anchors (smooth scroll) and non-hash (allow navigation) but close panels
             [leftNav, rightNav].forEach(function(nav){
-                nav.querySelectorAll('a.nav-btn[href^="#"]').forEach(function(a){
+                nav.querySelectorAll('a.nav-btn').forEach(function(a){
                     a.addEventListener('click', function(e){
-                        var id = a.getAttribute('href').slice(1);
-                        if(id){ e.preventDefault(); scrollToId(id); }
-                        // close after a short delay to allow scroll to start
+                        var href = a.getAttribute('href') || '';
+                        if(href.charAt(0) === '#'){
+                            var id = href.slice(1);
+                            if(id){ e.preventDefault(); scrollToId(id); }
+                        }
+                        // close after a short delay to allow navigation/scroll to start
                         setTimeout(closePanels, 60);
                     });
                 });
