新增第八条正卷内容

--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@ var _hmt = _hmt || [];
             1. 《中华人民共和国政府信息公开条例》第十九条：对涉及公众利益调整、需要公众广泛知晓或者需要公众参与决策的政府信息，行政机关应当主动公开。<br>
             2. 《中华人民共和国政府信息公开条例》第五条：行政机关公开政府信息，应当坚持以公开为常态、不公开为例外，遵循公正、公平、合法、便民的原则。<br>
             3. 最高人民法院关于司法公开的相关规定：涉及公众诉讼权利、诉讼流程的规范性文件，应当通过官方渠道主动公开，保障公众知情权和权利行使。<br>
-            4.《人民法院诉讼档案管理办法》和《人民法院电子诉讼档案管理暂行办法》（法〔2013〕283号）<br>
+            4.《人民法院诉讼档案管理办法》和《人民法院电子诉讼档案管理暂行办法》（法〔2013〕283号）附件1《人民法院诉讼文书材料立卷规范》<br>
+            <p>第八条　诉讼文书正卷材料：
+
+　　(1)立案审批表；(2)起诉状、上诉状、抗诉书、案件移送函等表明案件来源的材料；(3)原审人民法院裁判文书；(4)受理通知书、应诉通知书及送达回证或者其他送达凭证；(5)答辩状及送达回证或者其他送达凭证；(6)诉讼费收取手续；(7)送卷函、调卷函；(8)当事人身份证明、授权委托书；(9)调查、询问、讯问笔录、调查取证材料；(10)当事人提供的证据材料；(11)诉前保全、财产保全材料；(12)司法鉴定材料；(13)传票、提押票；(14)开庭通知、公告、庭审笔录；(15)代理词、辩护词、被告人陈述词；(16)延长审理期限审批表；(17)撤诉书；(18)判决书、裁定书、调解书、决定书、司法建议书和其他法律文书正本及送达回证或者其他送达凭证；(19)宣判公告、宣判笔录、委托宣判函；(20)死刑执行命令；(21)物证处理材料；(22)妨碍诉讼的强制措施材料；(23)民事、行政执行材料；(24)案件移送函存根、退卷函、退卷函存根、上级人民法院裁判文书正本；(25)其他诉讼文书材料。</p>
             5.《最高人民法院印发<关于全面推进人民法院电子卷宗随案同步生成和深度应用的指导意见>的通知》(法〔2016〕264号)
         </div>
     </div>
@@ -160,6 +163,11 @@ var _hmt = _hmt || [];
         <ol>
             <li>我在贵州某基层法院档案室查档遇阻，该院档案工作人员出具了上图所示文件，声称是黔高法〔2021〕69号，限制了我的阅卷权利；</li>
             <li>该院出具的文件内容与全国性的法律法规或规范性文件限制了阅卷人的权利更细化，却在公开渠道无法查询，引起我对其效力的质疑。</li>
+            <li>该院出具的文件内容"第五条：  经审核后，申请阅卷人可以摘抄、复制诉讼档案正卷材
+料；复制的材料，由档案工作人员核对无误后加盖档案证明专用章与
+档案原件具有同等的效力。案件当事人的身份证明材料、法院内部案
+卷函、备考表、证物袋等内容禁止摘抄、复制、拍摄。为保障案件全
+体当事人和诉讼参与人的权益，禁止摄录庭审录音录像。"与《人民法院诉讼档案管理办法》和《人民法院电子诉讼档案管理暂行办法》（法〔2013〕283号）附件1《人民法院诉讼文书材料立卷规范》第八条第（1项）规定矛盾。原因是既然是正卷内容，那就是与当事人存在法律关系，是需对特定对象公开并可供核实的材料，不属于内部规定的内容，即使属不对外公开的材料，也应依规定归入副卷，而不是先归入正卷后再出一个文件加以限制当事人的阅卷权。这样存在明显矛盾。</li>
         </ol>
     </div>
     <!-- 五、核心诉求 -->
